# motion-Planner

./: .gitignore  CMakeLists.txt  Doxyfile  readme.md
demo/: CMakeLists.txt  MinimumSnap  commonFunction.hpp  cppTypes.h  curve.cpp  math_function.hpp
demo/Minimum_snap/: minimumSnapMain.cpp  minimumsnap.cpp  minimumsnap.hpp
demo/record/: data7-13-11-27.txt  data7-13-17-3.txt  data7-14-11-24.txt  data7-14-11-44.txt  data7-14-21-41.txt  data7-15-10-11.txt  data7-15-10-12.txt  data7-15-10-26.txt  data7-15-10-43.txt  data7-15-10-46.txt  data7-15-10-5.txt  data7-15-10-7.txt  data7-15-11-13.txt  data7-15-11-16.txt  data7-15-11-19.txt  data7-15-11-34.txt  data7-15-11-6.txt  data7-15-11-7.txt  data7-15-15-23.txt  data7-15-15-25.txt  data7-15-15-27.txt  data7-15-15-29.txt  data7-15-15-37.txt  data7-15-15-40.txt  data7-15-9-38.txt  data7-15-9-53.txt  data7-18-16-34.txt
doc/: algorithm_summary.md
src/: math_function.hpp
src/Astar/: A*.cpp  A*.hpp  A*main.cpp  CMakeCache.txt  CMakeLists.txt
src/Hybrid_A*/: hybrid_A*.cpp  hybrid_A*.hpp  hybrid_A*.md
src/Minimum_snap/: CMakeLists.txt  minimumSnapMain.cpp  minimumsnap.cpp  minimumsnap.hpp
src/qpSolver/: qpSolver.cpp  qpSolver.hpp
